crates/cadenza-compiler/test-data/semantics/functions-error-not-a-function.expected
error: not callable
 --> test.cdz:2:1
  |
2 | x 10
  | ^ value of type Integer is not a function
  |
  = note: only functions can be called with arguments